[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/PlyCamera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 260, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 184 )

[node name="PlyCamera" type="Camera2D"]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 1 )

[node name="Adown" type="Area2D" parent="."]
editor/display_folded = true

[node name="down" type="CollisionShape2D" parent="Adown"]
position = Vector2( 0, 194 )
shape = SubResource( 1 )

[node name="Aup" type="Area2D" parent="."]
editor/display_folded = true

[node name="up" type="CollisionShape2D" parent="Aup"]
position = Vector2( 0, -194 )
shape = SubResource( 1 )

[node name="Aright" type="Area2D" parent="."]
editor/display_folded = true

[node name="right" type="CollisionShape2D" parent="Aright"]
position = Vector2( 250, 0 )
shape = SubResource( 2 )

[node name="Aleft" type="Area2D" parent="."]
editor/display_folded = true

[node name="left" type="CollisionShape2D" parent="Aleft"]
position = Vector2( -250, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Adown" to="." method="_on_Adown_body_entered"]
[connection signal="body_entered" from="Aup" to="." method="_on_Aup_body_entered"]
[connection signal="body_entered" from="Aright" to="." method="_on_Aright_body_entered"]
[connection signal="body_entered" from="Aleft" to="." method="_on_Aleft_body_entered"]
